hiding tabs under construction, updating quotes updated wording on about page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,9 +2,11 @@
   link: /
 - name: About
   link: /about.html
+  #-name: Projects
+  #link: /projects.html
 - name: Contact
   link: /contact.html
-- name: Resources
-  link: /resources.html
-- name: Industry Topics
-  link: /blog.html
+#- name: Resources
+#  link: /resources.html
+#- name: Industry Topics
+# link: /blog.html
